# CommonLib_Linux

./: .clang-format  .clangd  .editorconfig  .gitignore  .tasks  .ycm_extra_conf.py  CMakeLists.txt  CreatedXml.xml  LICENSE  Makefile  README.md  build.sh  gui_filesearch.c  gui_filesearch.h  test  test.cpp
ZwAiStick/: CMakeLists.txt  README.md
ZwAiStick/include/usbpipe/: zw_usbpipe_util.h
ZwAiStick/src/: zw_aistick_api.c  zw_aistick_sys.c  zw_aistick_task.c  zw_aistick_util.c
ZwAiStick/src/include/: AiStick.h  zw_aistick.h  zw_aistick_sys.h  zw_aistick_task.h  zw_aistick_util.h
ZwAiStick/test/sync_call/: main.c
ZwAiStick/test/test_api/: CMakeLists.txt  main.c
ZwAiStick_v2/: build.sh
ZwAiStick_v2/src/: CMakeLists.txt  zw_aistick.c  zw_aistick_sys.c  zw_aistick_task.c  zw_aistick_util.c
ZwAiStick_v2/src/include/: zw_aistick_api.h  zw_aistick_struct.h  zw_aistick_sys.h  zw_aistick_task.h  zw_aistick_util.h
ZwAiStick_v22/: .editorconfig  CMakeLists.txt  build.sh
ZwAiStick_v22/include/usbpipe/: zw_usbpipe_base.h  zw_usbpipe_uptp_api.h
ZwAiStick_v22/src/: CMakeLists.txt  zw_aistick_api.cpp  zw_aistick_httpclient.cpp  zw_aistick_sys.cpp  zw_aistick_task.cpp  zw_aistick_util.cpp
ZwAiStick_v22/src/include/: zw_aistick_api.h  zw_aistick_httpclient.h  zw_aistick_struct.h  zw_aistick_sys.h  zw_aistick_task.h  zw_aistick_util.h
ZwAiStick_v22/test/: CMakeLists.txt
ZwAiStick_v22/test/sync_call/: CMakeLists.txt
ZwAiStick_v22/test/test_api/: CMakeLists.txt  main.cpp
ZwAiStick_v22/test/test_init/: CMakeLists.txt  main.cpp
ZwAiStick_v22/test/test_init_uninit/: CMakeLists.txt  main.cpp
ZwAiStick_v22/test/test_mbuf/: CMakeLists.txt  mbuf.cpp
ZwAiStick_v22/test/test_queue_stream/: CMakeLists.txt  main.cpp
ZwAiStick_v22/test/test_tail_queue/: CMakeLists.txt
ZwAiStick_v22/test/test_zw_str/: CMakeLists.txt  main.cpp  zw_str.cpp  zw_str.h
ZwAiStick_v3/: CMakeLists.txt  README.md
ZwUsbPipe/: CMakeLists.txt
ZwUsbPipe_v2/: CMakeLists.txt  README.md  build.sh
ZwUsbPipe_v2/device/: main.c
ZwUsbPipe_v2/host/: main.c
ZwUsbPipe_v2/libpipe/: CMakeLists.txt  zw_usbpipe_base.c  zw_usbpipe_uptp_api.c  zw_usbpipe_util.c
ZwUsbPipe_v2/libpipe/include/: zw_usbpipe_uptp_api.h
ZwUsbPipe_v2/sender/: CMakeLists.txt  main.c
ZwUsbPipe_v2/test_list/: main.c
ZwUsbPipe_v22/: CMakeLists.txt  README.md
ZwUsbPipe_v22/device/: CMakeLists.txt  main.cpp
ZwUsbPipe_v22/host/: CMakeLists.txt  main.c
ZwUsbPipe_v22/libpipe/: CMakeLists.txt  zw_usbpipe_base.c  zw_usbpipe_uptp.c  zw_usbpipe_uptp_api.c  zw_usbpipe_util.c
ZwUsbPipe_v22/libpipe/include/: zw_usbpipe_uptp.h  zw_usbpipe_util.h
ZwUsbPipe_v22/libpipe_device/: CMakeLists.txt  zw_usbpipe_base.c  zw_usbpipe_uptp.c  zw_usbpipe_uptp_api.c  zw_usbpipe_util.c
ZwUsbPipe_v22/libpipe_device/include/: zw_usbpipe_base.h  zw_usbpipe_uptp_api.h  zw_usbpipe_util.h
ZwUsbPipe_v22/sender/: CMakeLists.txt  main.c
aac_parse/: CMakeLists.txt  aac_parse.c  adts.c  adts.h
btree_test/: CMakeLists.txt  main.c
check_endian/: CMakeLists.txt  main.c
common_utils/: CMakeLists.txt  mbuf.c  mbuf.h
curl_restful/: CMakeLists.txt  ftpget_main.c  restful_main.c
data_struct/: CMakeLists.txt
demo_err/: CMakeLists.txt  main.c
det_sys/: CMakeLists.txt  det_sys.c
docs/: mkdocs.yml
easydemo/: CMakeLists.txt  demo.c  demo.cpp
format/: tmp.xml
include/: hgh_stdio.h  stdio.h
lib_btree/: CMakeLists.txt  btree.c  btree.h
lib_log/: CMakeLists.txt  log.c  log.h
lib_mongoose/: CMakeLists.txt  test.cpp  test.h
linux_net/: CMakeLists.txt
live555_module/: CMakeLists.txt
live555_module/hashlib/: CMakeLists.txt  basichashtable.cpp  basichashtable.h  hashtable.cpp  hashtable.h  strDup.cpp  strDup.h
live555_module/hashlib/test/: CMakeLists.txt  hash_test01.cpp
mi48_test/: CMakeLists.txt  main.cpp
mongoose/: CMakeLists.txt  unit_test.sh
multi_pthread/: CMakeLists.txt  README.md
nerdfont_echo/: CMakeLists.txt  main.c
nginx_module/: CMakeLists.txt
nginx_module/ngxlib/: CMakeLists.txt  ngx_alloc.c  ngx_alloc.h  ngx_auto_config.h  ngx_config.h  ngx_core.h  ngx_errno.c  ngx_errno.h  ngx_hash.c  ngx_hash.h  ngx_linux_config.h  ngx_list.c  ngx_list.h  ngx_log.c  ngx_log.h  ngx_palloc.c  ngx_palloc.h  ngx_rbtree.c  ngx_rbtree.h  ngx_string.c  ngx_string.h
nginx_module/ngxlib/test/: CMakeLists.txt  ngx_test01.c
ntp/: CMakeLists.txt  ntp.c
png2argb/: CMakeLists.txt  main.c
res/: frame_translate.txt
shell/: S00dev  S01dev  S02dev  S03dev  S04dev  S14dev  S24dev  S54dev  configure  file_filter.sh  get.sh  test.conf  test.sh  test01.sh  work.sh  xmake-v2.3.1.xz.run
smemcap/: CMakeLists.txt  smemcap.c
snippter/: snippets.json
struct_data/: CMakeLists.txt
sys_proc/: CMakeLists.txt  proc_pid_maps.c  proc_pid_maps.h  proc_pid_stat.c  proc_pid_stat.h  proc_pid_statm.c  proc_pid_statm.h  proc_pid_status.c  (+4 more)
test_mongoose/mongoose/: CMakeLists.txt  api_server  api_server.c  api_server.db
tf_demo/: CMakeLists.txt  TF_Config.h  utils.c  utils.h
tf_demo/test/t1/: main.c
tf_demo/test/t2/: main.c
timer_test/: CMakeLists.txt  readme.md  test3.c
use_curl/: CMakeLists.txt  README.md
use_curl/src/: curl_post_form.c  ftp_get.c  main.c  simple_dbg.c  simple_get.c
use_fcgi/: CMakeLists.txt  test.c  test01.c
use_zlib/: CMakeLists.txt
vim/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  cscope.files
vim/doc/: mainpage.md
vim/include/: common_util.h  globals.h  macros.h  vim.h
vim/output/html/: annotated.html  classes.html  common__util_8h.html  common__util_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_8h.html  globals_8h__dep__incl.md5  globals_8h_source.html  globals_vars.html  graph_legend.html  index.html  macros_8h_source.html  md_README.html  md_doc_mainpage.html  pages.html  structAAA__T.html  structABC__T.html  structmparm__T.html  vim_8h.html  vim_8h__incl.md5  vim_8h_source.html
vim/output/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  classes_1.js  files_2.js  pages_1.js  searchdata.js  variables_0.js
vim/src/: CMakeLists.txt  main.c
(+211 files in other folders)
