set(TARGET_NAME pipe_sender)
set(TARGET_LIST main.c)

add_executable(${TARGET_NAME} ${TARGET_LIST})
target_link_libraries(${TARGET_NAME} usbpipe)
target_link_libraries(${TARGET_NAME} libmpi.a)
target_link_libraries(${TARGET_NAME} libjpeg.a)
target_link_libraries(${TARGET_NAME} libupvqe.a)
target_link_libraries(${TARGET_NAME} libVoiceEngine.a)
target_link_libraries(${TARGET_NAME} libdnvqe.a)
target_link_libraries(${TARGET_NAME} dl)
target_link_libraries(${TARGET_NAME} m)
target_link_libraries(${TARGET_NAME} pthread)
